# pan-agent

./: .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum  pan-agent.key.pub
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: vendor_sync.md
.github/workflows/: ai-slop-check.yml  chaos.yml  ci.yml  codeql.yml  e2e-real-webview.yml  lint.yml  release.yml  vendor-sync.yml
cmd/pan/: main.go
cmd/pan-agent/: doctor_tools.go  doctor_tools_test.go  main.go  main_test.go  migrate_office.go  rag.go  rag_test.go  secret.go  secret_test.go  skill.go  skill_publish.go  skill_publish_test.go  skill_test.go  tools.go  tools_test.go
desktop/: eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  api.ts  constants.ts  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/binaries/: .gitkeep
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  permissions.rs
docs/: MANUAL.md  README.md  bench-ws-2026-Q2.md  migration-guide.md  openapi.yaml  protocol.md  runbook.md
docs/design/: phase12.md  phase13.md
sbom/: allowlist.txt
scripts/: build-bundle.ps1  build-bundle.sh  openapi-exempt.txt  verify-api.sh
(+382 files in other folders)
